<resources>
    <string name="app_name">Bird Manager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="add_bird">Add Bird</string>
    <string name="search_birds">Search Birds</string>
    <string name="title_activity_add_bird">Add Bird</string>
    <string name="title_activity_search_bird">Search Bird</string>
    <string name="title_activity_search_experiment">Search Experiment</string>
    <string name="title_activity_view_bird">View Bird</string>
    <string name="title_activity_view_birds">View Birds</string>
    <string name="title_activity_view_experiment">View Experiment</string>
    <string name="title_activity_view_experiments">View Experiments</string>
    <string name="title_activity_edit_bird">EditBird</string>
    <string name="title_activity_add_experiment">Add Experiment</string>
    <string name="title_activity_edit_experiment">Edit Experiment</string>
    <string name="title_activity_exp_add_success">ExpAddSuccess</string>
    <string name="title_activity_add_bird_success">AddBirdSuccess</string>
    <string name="title_activity_edit_bird_success">AddBirdSuccess</string>
    <string name="title_activity_view_relatives">View Relatives</string>
    <string name="title_activity_quit_or_logout">Logout or Quit</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="legbandID">LegBandID</string>
    <string name="name">Name</string>
    <string name="groupWithExperiment">Group within Experiment</string>
    <string name="birdthdate">Birthdate</string>
    <string name="deathdate">Death Date</string>
    <string name="includeInQuery">Include In Query</string>
    <string name="experimentType">Experiment Type</string>
    <string name="relatives">Relatives</string>
    <string name="sex">Sex</string>
    <string name="sexMale">Male</string>
    <string name="editBird">Edit Bird</string>
    <string name="sexFemale">Female</string>
    <string name="experimentId">Experiment Id</string>
    <string name="experimentTitle">Experiment Title</string>
    <string name="editBirdTxt">Edit Bird</string>
    <string name="experimentGroup">Experiment Group</string>
    <string name="experimentPosition">Experiment Position</string>
    <string name="experimentStatus">Experiment Status</string>
    <string name="experimentActive">Experiment Active</string>
    <string name="experimentInactive">Experiment Inactive</string>
    <string name="startDate">Experimemt Start</string>
    <string name="endDate">Experimemt End</string>
    <string name="title_activity_add_medical_history">AddMedicalHistory</string>
    <string name="medicalListDash">- </string>
    <string name="importBirds">Import Birds</string>
    <string name="title_activity_edit_experiment_success">EditBirdSuccess</string>
</resources>
