<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="businessLogicLayer.ViewBird">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:orderInCategory="600"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_bird"
        android:title="@string/add_bird"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/search_bird"
        android:title="@string/search_birds"
        android:orderInCategory="200"
        app:showAsAction="never"/>
    <item
        android:id="@+id/search_experiment"
        android:title="@string/title_activity_search_experiment"
        android:orderInCategory="400"
        app:showAsAction="never"/>
    <item android:id="@+id/add_experiment"
        android:title="@string/title_activity_add_experiment"
        android:orderInCategory="300"
        app:showAsAction="never"/>
    <item android:id="@+id/quit_or_logout"
        android:title="@string/title_activity_quit_or_logout"
        android:orderInCategory="700"
        app:showAsAction="never"/>
</menu>
