<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="businessLogicLayer.MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="400" app:showAsAction="never" />
    <item android:id="@+id/add_bird" android:title="@string/add_bird"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/search_birds" android:title="@string/search_birds"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/title_activity_search_experiment" android:title="@string/title_activity_search_experiment"
        android:orderInCategory="300" app:showAsAction="never" />
</menu>
