<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="businessLogicLayer.SearchExperiment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/experimentTitle"
                android:layout_height="wrap_content"
                android:id="@+id/txtExperimentTitle"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/experimentTitle"
                android:layout_below="@+id/txtExperimentTitle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/experimentGroup"
                android:layout_height="wrap_content"
                android:id="@+id/txtExperimentGroup"
                android:layout_below="@+id/experimentTitle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/experimentGroup"
                android:layout_below="@+id/txtExperimentGroup"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/experimentType"
                android:layout_height="wrap_content"
                android:id="@+id/txtExperimentType"
                android:layout_below="@+id/experimentGroup"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/experimentType"
                android:layout_below="@+id/txtExperimentType"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/startDate"
                android:layout_height="wrap_content"
                android:id="@+id/txtStartDate"
                android:layout_below="@+id/experimentType"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/includeInQuery"
                android:id="@+id/searchStart"
                android:layout_below="@+id/txtStartDate"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startDatePicker"
                android:layout_below="@+id/searchStart"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:datePickerMode="spinner"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/endDate"
                android:layout_height="wrap_content"
                android:id="@+id/txtEndDate"
                android:layout_below="@+id/startDatePicker"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/includeInQuery"
                android:id="@+id/searchEnd"
                android:layout_below="@+id/txtEndDate"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/endDatePicker"
                android:layout_below="@+id/searchEnd"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:datePickerMode="spinner"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/search"
                android:onClick="openViewExperiment"
                android:layout_below="@+id/endDatePicker"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
